# headguard

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
src/headguard/: __init__.py  cli.py  grading.py  models.py  report.py  scanner.py
src/headguard/checks/: __init__.py  clickjacking.py  content_type.py  cookies.py  cross_origin.py  csp.py  disclosure.py  hsts.py  legacy.py  permissions.py  referrer.py
src/headguard/web/: __init__.py  app.py  guard.py
src/headguard/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_cli.py  test_clickjacking.py  test_cookies.py  test_csp.py  test_grading.py  test_hsts.py  test_scanner.py  test_web.py
