[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "headguard"
version = "0.1.0"
description = "Scan a site's HTTP security headers (HSTS, CSP, X-Frame-Options, ...) and grade its hardening."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Renato Almeida" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
]
keywords = ["security", "http", "headers", "csp", "hsts", "hardening", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
headguard = "headguard.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/headguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
